CI通過のための修正